# outliers

./: .gitignore  Makefile  README.md  google.config.js  package.json  pnpm-lock.yaml
docs/: index.html
docs/_app/: error.svelte-02cf9c24.js  error.svelte-0d616652.js  error.svelte-28e1c05a.js  error.svelte-2c8db8f9.js  error.svelte-37e569f4.js  error.svelte-4a3699d5.js  error.svelte-4b0bdbb6.js  error.svelte-60f2d3ea.js  error.svelte-6e2a37a0.js  error.svelte-7a0bbbd5.js  error.svelte-82df9257.js  error.svelte-89443a6d.js  error.svelte-9b25abde.js  error.svelte-9c1a42de.js  error.svelte-bb15c6ad.js  error.svelte-befe07b4.js  error.svelte-c3ce4b94.js  error.svelte-e2e44117.js  error.svelte-f162fadf.js  error.svelte-f17ab1e7.js  error.svelte-f84ec1bc.js  manifest.json  start-0158a57c.js  start-09ab3034.js  start-0d0c4806.js  start-0d3ae8ad.js  start-19a0c26d.js  start-19fa5160.js  start-2d735f94.js  start-2dbcdc7b.js  start-2f754e0b.js  start-30831f2c.js  start-33e5dd50.js  start-3c68d4bb.js  start-3f629299.js  start-411c8b07.js  start-4bd37cfe.js  start-4bf9b4e6.js  start-57c023f7.js  start-59d51742.js  (+25 more)
src/: hook.js
src/components/: App.svelte  Block.svelte  Header.svelte  Hero.svelte  Image.svelte  ImageRaw.svelte  LeadImageContainer.svelte  LeadText.svelte  Map.svelte  Mapbox.svelte  Meta.svelte  Methodology.svelte  Mobility.svelte  Mobility2.svelte  RadialChart.svelte  Slide.svelte  Stains.svelte  StreetSvg.svelte  Subhead.svelte  Text.svelte  (+1 more)
tasks/census/: README.md  place-data-etl.ipynb  pyproject.toml
tasks/census/data/: place-migration-raw.csv
(+131 files in other folders)
