[tool.poetry]
name = "census"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.3"
geopandas = "^0.11.0"
jupyter = "^1.0.0"
jupyterlab = "^3.4.3"
us = "^2.0.2"
python-dotenv = "^0.20.0"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
